--- a/config/dynamicconfig/development-cass.yaml
+++ b/config/dynamicconfig/development-cass.yaml
@@ -43,13 +43,26 @@ frontend.workerVersioningWorkflowAPIs:
 frontend.accessHistoryFraction:
   - value: 1.0
 
-matching.numTaskqueueWritePartitions:
-  - value: 2
-    constraints:
-      namespace: backlog_exp
+#matching.numTaskqueueWritePartitions:
+#  - value: 2
+#    constraints:
+#      namespace: backlog_exp
 #      taskQueueName: <task queue name>
-matching.numTaskqueueReadPartitions:
-  - value: 2
-    constraints:
-      namespace: backlog_exp
+#matching.numTaskqueueReadPartitions:
+#  - value: 2
+#    constraints:
+#      namespace: backlog_exp
 #      taskQueueName: <task queue name>
+
+#matching.forwarderMaxOutstandingTasks:
+#  - value: 0
+#    constraints:
+#      namespace: backlog_exp
+#matching.forwarderMaxOutstandingPolls:
+#  - value: 1
+#    constraints:
+#     namespace: backlog_exp
+#matching.newForward:
+#  - value: true
+#    constraints:
+#     namespace: backlog_exp
